2007-01-25  Darin Adler  <darin@apple.com>

        Reviewed by Beth.

        - fix <rdar://problem/4952766> Safari has a top secret color picker that can be used to... uhh... I don't know

        * Panels/English.lproj/WebAuthenticationPanel.nib/info.nib: Let Interface Builder have its way.
        * Panels/English.lproj/WebAuthenticationPanel.nib/objects.nib: Remove the NSColorWell that was
        in here (for no good reason).

2007-01-25  Kevin Decker  <kdecker@apple.com>

        Reviewed by andersca.

        A few tweaks with of a fix done by Steve Gehrman.

        Fixed: <rdar://problem/4946922> WebBaseNetscapePluginView leaks memory
               http://bugs.webkit.org/show_bug.cgi?id=11523

        * Plugins/WebBaseNetscapePluginStream.m:
        (-[WebBaseNetscapePluginStream setPlugin:]): Calls -[WebBaseNetscapePluginView streamIsDead:]
        * Plugins/WebBaseNetscapePluginView.h: Added streamIsDead to header.
        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView streamIsDead:]): Added. Removes the stream from the streams collection.

2007-01-25  John Sullivan  <sullivan@apple.com>

        Reviewed by Kevin, Geoff, Brady, and Darin
        
        - fixed <rdar://problem/4918446> Safari's temp files (PDF's) should be in a sub-folder when calling Preview
        
        * WebView/WebPDFView.mm:
        (-[WebPDFView _path]):
        use _temporaryPDFDirectoryPath method instead of #defines for hardwiring strings; stop bad practice
        of modifying the const char* returned by fileSystemRepresentation
        (-[WebPDFView _temporaryPDFDirectoryPath]):
        new method, lazily creates and returns a secure temporary directory created with NSTemporaryDirectory()
        and mkdtemp

        * English.lproj/StringsNotToBeLocalized.txt:
        Updated for these and other recent changes

2007-01-24  Oliver Hunt  <oliver@apple.com>

        Build fix 

        * WebView/WebHTMLView.mm: