@@ -149,7 +149,6 @@ typedef union PluginPort {
 - (void)setBaseURL:(NSURL *)theBaseURL;
 - (void)setAttributeKeys:(NSArray *)keys andValues:(NSArray *)values;
 - (void)setMode:(int)theMode;
-- (void)streamIsDead:(WebBaseNetscapePluginStream*)stream;
 - (void)viewWillMoveToHostWindow:(NSWindow *)hostWindow;
 - (void)viewDidMoveToHostWindow;
 
