@@ -1,3 +1,12 @@
+2007-01-25  Kevin Decker <kdecker@apple.com>
+
+        Backed out my last patch because it crashes espn.com. Stay tuned for a newer version..
+
+        * Plugins/WebBaseNetscapePluginStream.m:
+        (-[WebBaseNetscapePluginStream setPlugin:]): Removed call to streamIsDead.
+        * Plugins/WebBaseNetscapePluginView.h: Removed streamIsDead.
+        * Plugins/WebBaseNetscapePluginView.mm: Ditto.
+
 2007-01-25  Darin Adler  <darin@apple.com>
 
         Reviewed by Beth.
